# icotes

./: .dockerignore  .env.example  .env.production  .gitignore  Agent.md  CHANGELOG.md  DEPLOYMENT-COMPARISON.md  DEPLOYMENT.md  DOCKER_WORKFLOW_SETUP.md  Dockerfile  EFFICIENCY_REPORT.md  ENHANCED_MIGRATION_COMPLETE.md  ENVIRONMENT_SETUP.md  LICENSE  Optimization.md  README.md  SETUP.md  TICKET_RESPONSE.md  build-docker.sh  build-saas-docker.sh  check-servers.sh  clean.sh  cleanup_log.md  cleanup_terminals.py  debug_agent.sh  debug_semantic_search.js  debug_websocket_connection.js  deploy-production.sh  docker-compose.yml  icotes-clipboard  index.html  manual_reap.py  nixpacks.toml  package-lock.json  package.json  setup.sh  simple-saas-test.py  start-dev-env.sh  start-dev-uv.sh  start-dev.sh  (+28 more)
backend/: README.md  STEP_6_5_COMPLETION_SUMMARY.md  TEST_CLEANUP.md  chat.db  cleanup_test_artifacts.py  demo_cli.py  how_to_test.md  icpy_cli.py  kill_zombies.py  logging.conf  main.py  main.py.backup  pyproject.toml  requirements-agentic.txt  requirements.txt  setup_chat_agent.py  start.sh  start_with_uv.sh  start_with_venv.sh  terminal.py  terminal_startup.sh  test-file.js  test_agents_simple.py  test_api_fix.py  test_chat_service_simple.py  test_cli_functionality.py  test_comprehensive.py  test_comprehensive_real_api.py  test_context_manager_real_api.py  test_default_vs_custom.py  test_directory_endpoint.py  test_directory_issue.py  test_endpoints.py  test_gpt5_compatibility.py  test_legacy_ws_fix.py  test_personal_agent_fix.py  test_real_api_integration.py  test_rest_api_simple.py  test_rest_minimal.py  test_simple_agent.py  (+10 more)
backend/icpy/: __init__.py  agent_sdk_doc.md  auth.py
backend/icpy/agent/: __init__.py  ali_agent.py  base_agent.py  cerb_qwen_agent.py  clients.py  custom_agent.py  debug_interceptor.py  demo_agent.py  environment.py  grog_kimi_agent.py  groq_kimi_agent.py  helpers.py  hot_reload_registry.py  mailsent_agent.py  openai_agent.py  openrouter_agent.py  personal_agent.py  qwen3coder_agent.py  test_agent.py
backend/icpy/api/: __init__.py  media.py  rest_api.py  websocket_api.py
backend/icpy/cli/: __init__.py  command_handlers.py  http_client.py  icpy_cli.py  main_cli.py
backend/icpy/core/: __init__.py  auth_helpers.py  connection_manager.py  cors.py  event_broadcaster.py  framework_compatibility.py  message_broker.py  protocol.py  static_files.py
backend/icpy/gateway/: __init__.py  api_gateway.py
backend/icpy/scripts/: __init__.py  migrate_hop_config.py  validate_hop_config.py
backend/icpy/services/: __init__.py  agent_config_service.py  agent_service.py  ai_agent_service.py  chat_service.py  clipboard_service.py  code_execution_service.py  context_builder.py  context_router.py  filesystem_service.py  hop_service.py  image_cache.py  image_reference_service.py  image_resolver.py  lsp_service.py  media_service.py  path_utils.py  preview_service.py  remote_fs_adapter.py  remote_terminal_manager.py  source_control_service.py  state_sync_service.py  terminal_service.py  workspace_service.py
backend/icpy/utils/: gemini_debug_logger.py  log_filters.py  log_rotation.py  logging.py  process_reaper.py  ssh_config_parser.py  (+2 more)
backend/tests/: TEST_COVERAGE_SUMMARY.md  __init__.py  conftest.py  how_to_test.md  icpy_cli.py  test_chat_service_integration.py  test_context_building.py  test_gemini_image_generation.py  test_imagen_tool.py  test_media_service.py  test_nano_banana_editing.py  test_nano_banana_fix.py  test_source_control_service.py  test_vendor_parts.py
(+782 files in other folders)
