[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "pydantic>=2.10.0",
    "python-multipart==0.0.6",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "aiofiles==24.1.0",
    "watchdog==6.0.0",
    "requests==2.31.0",
    "aiohttp==3.10.11",
    "openai>=1.0.0",
    "crewai==0.30.11",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "langsmith>=0.0.80",
    "aiosqlite==0.19.0",
    "openai-agents>=0.0.6",
]
